[package]
name = "tor-analyzer-lib"
version = "0.1.0"
authors = ["Thomas WACHE <thomas@wache.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.4", features = ["full"] }
torut = "0.1"
nom = "6"
base32 = "0.4"
base64 = "0.10"

[build-dependencies]
bindgen = "*"
