[package]
name = "tor-analyzer-lib"
version = "0.1.0"
authors = ["Thomas WACHE <thomas@wache.fr>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "tor-analyzer-lib"

[dependencies]
nom = "7"
base32 = "0.4"
base64 = "0.21"
rand = "0.8"
hmac-sha256 = "1"
log = "0.4"

[build-dependencies]
bindgen = "*"
